<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:configChanges="orientation|screenSize"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.john.platzigram.activities.NewPostActivity">

    <include layout="@layout/actionbar_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="@dimen/padding_horizontal_login"
            android:paddingVertical="@dimen/padding_horizontal_login"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivPicture"
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:scaleType="centerCrop"
                android:background="@drawable/banana"/>

            <Button
                android:id="@+id/btnTakePicture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/RaisedButtonDark"
                android:onClick="pictureHandler"
                android:text="@string/take_select_picture"
                android:drawableLeft="@drawable/camera"
                android:layout_marginHorizontal="@dimen/padding_horizontal_login"/>

            <TextView
                android:id="@+id/errors_new_post"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_dark"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/newPost_tittle_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                app:layout_constraintVertical_chainStyle="spread_inside"
                android:layout_marginTop="@dimen/marginTop_tittle_newPost">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/newPost_tittle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_tittle" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/newPost_description_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                app:layout_constraintVertical_chainStyle="spread_inside"
                android:layout_marginTop="@dimen/editText_margin_createAccount">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/newPost_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_description" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnPost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_post_button"
                android:onClick="createPost"
                android:theme="@style/RaisedButtonDark"/>

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
